data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_746.wast
;; 7. **Test Description**: Use a `loop` block where the `br` instruction branches back but the stack heights mismatched.    - **Constraint Checked**: Confirms that looping branches handle stack height requirements correctly.    - **Incorrect Condition Evaluation**: An incorrect condition might lead to malfunction in looping structure.

(assert_invalid
  (module (func $loop-mismatched-stack-height
    (loop (result i32) (i32.const 1) (br 0))
  ))
  "type mismatch"
)